src/main/java/ru/etu/cgvm/javacc/parser/CgifParser.java
/* CgifParser.java */
/* Generated by: ParserGeneratorCC: Do not edit this line. CgifParser.java */
package ru.etu.cgvm.javacc.parser;

import ru.etu.cgvm.objects.Arc;
import ru.etu.cgvm.objects.Referent;
import ru.etu.cgvm.objects.SignatureParameter;
import ru.etu.cgvm.objects.Type;
import ru.etu.cgvm.objects.base.Node;
import ru.etu.cgvm.objects.nodes.Actor;
import ru.etu.cgvm.objects.nodes.Concept;
import ru.etu.cgvm.objects.nodes.Graph;
import ru.etu.cgvm.objects.nodes.Relation;

import java.io.ByteArrayInputStream;
import java.io.InputStream;
import java.io.Reader;
import java.nio.charset.StandardCharsets;

public class CgifParser implements CgifParserConstants {

    private Graph topGraph;

    public CgifParser() {
        this((Reader) null);
    }

    public Graph parse(String content) throws ParseException {
        InputStream is = new ByteArrayInputStream(content.getBytes());
        ReInit(is, StandardCharsets.UTF_8.name());
        topGraph = new Graph();
        initTopLevelGraph();
        return topGraph;
    }

    /* Root production. */
    final public void initTopLevelGraph() throws ParseException {
        trace_call("initTopLevelGraph");
        try {

            graph(null);
        } finally {
            trace_return("initTopLevelGraph");
        }
    }

    final public void graph(Graph enclosingGraph) throws ParseException {
        trace_call("graph");
        try {
            Graph graph;
            if (enclosingGraph == null) {
                graph = topGraph;
            } else {
                graph = new Graph(enclosingGraph);
            }
            label_1:
            while (true) {
                term(graph);
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LPAREN:
                    case LBRACKET:
                    case LESSTHAN:
                    case TILDE: {
                        break;
                    }
                    default:
                        jj_la1[0] = jj_gen;
                        break label_1;
                }
            }
        } finally {
            trace_return("graph");
        }
    }

    final public void term(Graph g) throws ParseException {
        trace_call("term");
        try {

            if (jj_2_1(3)) {
                concept(g);
            } else {
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LPAREN: {
                        relation(g);
                        break;
                    }
                    case LESSTHAN: {
                        actor(g);
                        break;
                    }
                    default:
                        jj_la1[1] = jj_gen;
                        if (jj_2_2(3)) {
                            context(g);
                        } else if (jj_2_3(3)) {
                            conceptTypeHierarchy(g);
                        } else {
                            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                                case LBRACKET: {
                                    relationTypeHierarchy(g);
                                    break;
                                }
                                default:
                                    jj_la1[2] = jj_gen;
                                    jj_consume_token(-1);
                                    throw new ParseException();
                            }
                        }
                }
            }
        } finally {
            trace_return("term");
        }
    }

    final public Referent.Designation designation() throws ParseException {
        trace_call("designation");
        try {
            Referent.Designation designation = new Referent.Designation();
            Token element = null;
            Token additionalInfo;
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case DECIMAL_LITERAL:
                case FLOATING_POINT_LITERAL:
                case QUOTED_STRING:
                case ADDITIONAL_INFO: {
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case ADDITIONAL_INFO: {
                            additionalInfo = jj_consume_token(ADDITIONAL_INFO);
                            designation.setAdditionalInfo(additionalInfo.image);
                            break;
                        }
                        default:
                            jj_la1[3] = jj_gen;
                            ;
                    }
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case DECIMAL_LITERAL: {
                            element = jj_consume_token(DECIMAL_LITERAL);
                            break;
                        }
                        case FLOATING_POINT_LITERAL: {
                            element = jj_consume_token(FLOATING_POINT_LITERAL);
                            break;
                        }
                        case QUOTED_STRING: {
                            element = jj_consume_token(QUOTED_STRING);
                            break;
                        }
                        default:
                            jj_la1[4] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    designation.setLiteral(element.image);
                    break;
                }
                case POUNDSIGN:
                case CHARACTER_LITERAL:
                case IDENTIFIER: {
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case CHARACTER_LITERAL: {
                            element = jj_consume_token(CHARACTER_LITERAL);
                            break;
                        }
                        case IDENTIFIER: {
                            element = jj_consume_token(IDENTIFIER);
                            break;
                        }
                        case POUNDSIGN: {
                            element = jj_consume_token(POUNDSIGN);
                            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                                case DECIMAL_LITERAL: {
                                    jj_consume_token(DECIMAL_LITERAL);
                                    break;
                                }
                                case IDENTIFIER: {
                                    jj_consume_token(IDENTIFIER);
                                    break;
                                }
                                default:
                                    jj_la1[5] = jj_gen;
                                    jj_consume_token(-1);
                                    throw new ParseException();
                            }
                            break;
                        }
                        default:
                            jj_la1[6] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    designation.setLocator(element.image);
                    break;
                }
                case QUANTIFIER: {
                    element = jj_consume_token(QUANTIFIER);
                    designation.setQuantifier(element.image);
                    break;
                }
                default:
                    jj_la1[7] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            {
                if ("" != null) return designation;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("designation");
        }
    }

    final public Referent.Descriptor descriptor() throws ParseException {
        trace_call("descriptor");
        try {
            Referent.Descriptor descriptor = new Referent.Descriptor();
            Token additionalInfo;
            Token structure;
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case ADDITIONAL_INFO: {
                    additionalInfo = jj_consume_token(ADDITIONAL_INFO);
                    descriptor.setAdditionalInfo(additionalInfo.image);
                    break;
                }
                default:
                    jj_la1[8] = jj_gen;
                    ;
            }
            structure = jj_consume_token(STRUCTURE);
            descriptor.setStructure(structure.image);
            {
                if ("" != null) return descriptor;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("descriptor");
        }
    }

    final public Referent referent() throws ParseException {
        trace_call("referent");
        try {
            Referent referent = new Referent();
            Referent.Descriptor descriptor = null;
            Referent.Designation designation = null;
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case COLON: {
                    jj_consume_token(COLON);
                    if (jj_2_4(2)) {
                        descriptor = descriptor();
                    } else {
                        ;
                    }
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case POUNDSIGN:
                        case DECIMAL_LITERAL:
                        case FLOATING_POINT_LITERAL:
                        case QUOTED_STRING:
                        case CHARACTER_LITERAL:
                        case ADDITIONAL_INFO:
                        case QUANTIFIER:
                        case IDENTIFIER: {
                            designation = designation();
                            break;
                        }
                        default:
                            jj_la1[9] = jj_gen;
                            ;
                    }
                    referent.setDescriptor(descriptor);
                    referent.setDesignation(designation);
                    {
                        if ("" != null) return referent;
                    }
                    break;
                }
                case TILDE: {
                    jj_consume_token(TILDE);
                    referent.setNegated(true);
                    {
                        if ("" != null) return referent;
                    }
                    break;
                }
                default:
                    jj_la1[10] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("referent");
        }
    }

    final public Concept concept(Graph enclosingGraph) throws ParseException {
        trace_call("concept");
        try {
            Concept concept = new Concept();
            Type type = null;
            Referent referent = null;
            Token coreferenceLink;
            jj_consume_token(LBRACKET);
            if (jj_2_5(2)) {
                type = type(concept);
            } else {
                ;
            }
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case RELATED_MARK:
                case DEFINING_MARK: {
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case RELATED_MARK: {
                            label_2:
                            while (true) {
                                coreferenceLink = jj_consume_token(RELATED_MARK);
                                concept.addCoreferenceLink(coreferenceLink.image);
                                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                                    case RELATED_MARK: {
                                        break;
                                    }
                                    default:
                                        jj_la1[11] = jj_gen;
                                        break label_2;
                                }
                            }
                            break;
                        }
                        case DEFINING_MARK: {
                            coreferenceLink = jj_consume_token(DEFINING_MARK);
                            concept.addCoreferenceLink(coreferenceLink.image);
                            break;
                        }
                        default:
                            jj_la1[12] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    break;
                }
                default:
                    jj_la1[13] = jj_gen;
                    ;
            }
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case COLON:
                case TILDE: {
                    referent = referent();
                    break;
                }
                default:
                    jj_la1[14] = jj_gen;
                    ;
            }
            jj_consume_token(RBRACKET);
            concept.setType(type);
            concept.setReferent(referent);
            enclosingGraph.addObject(concept);
            {
                if ("" != null) return concept;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("concept");
        }
    }

    final public Arc arc(Graph g) throws ParseException {
        trace_call("arc");
        try {
            Arc arc = new Arc();
            Graph context; // concept or context
            Concept concept;
            Token coreferenceLink;
            if (jj_2_6(3)) {
                concept = concept(g);
                arc.setConcept(concept);
            } else if (jj_2_7(3)) {
                context = context(g);
                arc.setContext(context);
            } else {
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case RELATED_MARK: {
                        coreferenceLink = jj_consume_token(RELATED_MARK);
                        arc.setCoreferenceLink(coreferenceLink.image);
                        break;
                    }
                    default:
                        jj_la1[15] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
            }
            {
                if ("" != null) return arc;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("arc");
        }
    }

    final public void relation(Graph enclosingGraph) throws ParseException {
        trace_call("relation");
        try {
            Relation relation = new Relation();
            Type type;
            Arc arc;
            jj_consume_token(LPAREN);
            type = type(relation);
            label_3:
            while (true) {
                arc = arc(enclosingGraph);
                relation.addArc(arc);
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LBRACKET:
                    case TILDE:
                    case RELATED_MARK: {
                        break;
                    }
                    default:
                        jj_la1[16] = jj_gen;
                        break label_3;
                }
            }
            jj_consume_token(RPAREN);
            relation.setType(type);
            enclosingGraph.addObject(relation);
        } finally {
            trace_return("relation");
        }
    }

    final public void actor(Graph g) throws ParseException {
        trace_call("actor");
        try {
            Actor actor = new Actor();
            Type type;
            Arc arc;
            jj_consume_token(LESSTHAN);
            type = type(g);
            label_4:
            while (true) {
                arc = arc(g);
                actor.addInputArc(arc);
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LBRACKET:
                    case TILDE:
                    case RELATED_MARK: {
                        break;
                    }
                    default:
                        jj_la1[17] = jj_gen;
                        break label_4;
                }
            }
            jj_consume_token(BAR);
            label_5:
            while (true) {
                arc = arc(g);
                actor.addOutputArc(arc);
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LBRACKET:
                    case TILDE:
                    case RELATED_MARK: {
                        break;
                    }
                    default:
                        jj_la1[18] = jj_gen;
                        break label_5;
                }
            }
            jj_consume_token(GREATERTHAN);
            actor.setType(type);
            g.addObject(actor);
        } finally {
            trace_return("actor");
        }
    }

    final public Graph lambda(Graph enclosingGraph) throws ParseException {
        trace_call("lambda");
        try {
            SignatureParameter signatureParameter;
            Graph lambda = new Graph();
            jj_consume_token(LPAREN);
            jj_consume_token(LAMBDA);
            jj_consume_token(LPAREN);
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case TILDE:
                case IDENTIFIER: {
                    signatureParameter = parameter(lambda);
                    lambda.addSignatureParameter(signatureParameter);
                    label_6:
                    while (true) {
                        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                            case COMMA: {
                                break;
                            }
                            default:
                                jj_la1[19] = jj_gen;
                                break label_6;
                        }
                        jj_consume_token(COMMA);
                        signatureParameter = parameter(lambda);
                        lambda.addSignatureParameter(signatureParameter);
                    }
                    break;
                }
                default:
                    jj_la1[20] = jj_gen;
                    ;
            }
            jj_consume_token(RPAREN);
            label_7:
            while (true) {
                term(lambda);
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LPAREN:
                    case LBRACKET:
                    case LESSTHAN:
                    case TILDE: {
                        break;
                    }
                    default:
                        jj_la1[21] = jj_gen;
                        break label_7;
                }
            }
            jj_consume_token(RPAREN);
            enclosingGraph.addObject(lambda);
            {
                if ("" != null) return lambda;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("lambda");
        }
    }

    final public SignatureParameter parameter(Graph g) throws ParseException {
        trace_call("parameter");
        try {
            SignatureParameter signatureParameter = new SignatureParameter();
            Type type;
            Token variable;
            type = type(g);
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case DEFINING_MARK: {
                    variable = jj_consume_token(DEFINING_MARK);
                    signatureParameter.setVariable(variable.image);
                    break;
                }
                default:
                    jj_la1[22] = jj_gen;
                    ;
            }
            signatureParameter.setType(type);
            {
                if ("" != null) return signatureParameter;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("parameter");
        }
    }

    final public Type type(Node g) throws ParseException {
        trace_call("type");
        try {
            Type type = new Type();
            Token name;
            Token negation;
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case TILDE: {
                    negation = jj_consume_token(TILDE);
                    type.setNegated(negation.image);
                    break;
                }
                default:
                    jj_la1[23] = jj_gen;
                    ;
            }
            name = jj_consume_token(IDENTIFIER);
            type.setName(name.image);
            {
                if ("" != null) return type;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("type");
        }
    }

    final public Graph context(Graph enclosingGraph) throws ParseException {
        trace_call("context");
        try {
            Graph context = new Graph();
            Token contextName;
            switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                case TILDE: {
                    jj_consume_token(TILDE);
                    context.setNegated(true);
                    jj_consume_token(LBRACKET);
                    label_8:
                    while (true) {
                        term(context);
                        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                            case LPAREN:
                            case LBRACKET:
                            case LESSTHAN:
                            case TILDE: {
                                break;
                            }
                            default:
                                jj_la1[24] = jj_gen;
                                break label_8;
                        }
                    }
                    jj_consume_token(RBRACKET);
                    break;
                }
                case LBRACKET: {
                    jj_consume_token(LBRACKET);
                    contextName = jj_consume_token(IDENTIFIER);
                    context.setContext(contextName.image);
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case COLON: {
                            jj_consume_token(COLON);
                            break;
                        }
                        default:
                            jj_la1[25] = jj_gen;
                            ;
                    }
                    label_9:
                    while (true) {
                        term(context);
                        switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                            case LPAREN:
                            case LBRACKET:
                            case LESSTHAN:
                            case TILDE: {
                                break;
                            }
                            default:
                                jj_la1[26] = jj_gen;
                                break label_9;
                        }
                    }
                    jj_consume_token(RBRACKET);
                    break;
                }
                default:
                    jj_la1[27] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            enclosingGraph.addObject(context);
            {
                if ("" != null) return context;
            }
            throw new IllegalStateException("Missing return statement in function");
        } finally {
            trace_return("context");
        }
    }

    final public void conceptTypeHierarchy(Graph g) throws ParseException {
        trace_call("conceptTypeHierarchy");
        try {

            jj_consume_token(LBRACKET);
            jj_consume_token(TYPEHIERARCHY);
            jj_consume_token(COLON);
            label_10:
            while (true) {
                if (jj_2_8(2)) {
                    conceptTypeDefinition(g);
                } else {
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case LPAREN: {
                            conceptTypeOrder(g);
                            break;
                        }
                        default:
                            jj_la1[28] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                }
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LPAREN: {
                        break;
                    }
                    default:
                        jj_la1[29] = jj_gen;
                        break label_10;
                }
            }
            jj_consume_token(RBRACKET);
        } finally {
            trace_return("conceptTypeHierarchy");
        }
    }

    final public void relationTypeHierarchy(Graph g) throws ParseException {
        trace_call("relationTypeHierarchy");
        try {

            jj_consume_token(LBRACKET);
            jj_consume_token(RELATIONHIERARCHY);
            jj_consume_token(COLON);
            label_11:
            while (true) {
                if (jj_2_9(2)) {
                    relationTypeDefinition(g);
                } else {
                    switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                        case LPAREN: {
                            relationTypeOrder(g);
                            break;
                        }
                        default:
                            jj_la1[30] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                }
                switch (jj_ntk == -1 ? jj_ntk_f() : jj_ntk) {
                    case LPAREN: {
                        break;
                    }
                    default:
                        jj_la1[31] = jj_gen;
                        break label_11;
                }
            }
            jj_consume_token(RBRACKET);
        } finally {
            trace_return("relationTypeHierarchy");
        }
    }

    final public void conceptTypeDefinition(Graph g) throws ParseException {
        trace_call("conceptTypeDefinition");
        try {
            Graph definition;
            String typeName;
            jj_consume_token(LPAREN);
            jj_consume_token(DEF);
            typeName = conceptTypeLabel();
            definition = lambdaExpression(g);
            jj_consume_token(RPAREN);
            g.getTypeHierarchy().addTypeDefinition(typeName, definition);
        } finally {
            trace_return("conceptTypeDefinition");
        }
    }
